Fixed bugs with jobs offers on mobile

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -431,6 +431,10 @@ ul.job_list_items li a {
   padding-right: 0;
 }
 
+.job_content {
+  margin-right: 3em;
+}
+
 .profile {
   padding-right: 0;
   opacity: 0;
